--- a/macos/Runner/GoogleService-Info.plist
+++ b/macos/Runner/GoogleService-Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyAy3HMLSuSENQJgTEoTKgZZVdPHxw_482Y</string>
+	<string>?</string>
 	<key>GCM_SENDER_ID</key>
 	<string>183267616147</string>
 	<key>PLIST_VERSION</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:183267616147:ios:dde095c167015877f57466</string>
+	<string>?</string>
 </dict>
 </plist>
